--- a/B2.md
+++ b/B2.md
@@ -15,22 +15,20 @@ Traditional banking marketing campaigns suffer from several critical limitations
 Our real-time optimization algorithm transforms this approach by creating a dynamic system that learns and adapts as customers interact with campaigns, maximizing ROI and customer engagement.
 
 ## 1. System Architecture Overview
-<img width="1328" alt="Screenshot 2025-03-30 at 22 30 59" src="https://github.com/user-attachments/assets/d09d4502-5005-4720-9914-f81e47f7aa01" />
+<img width="1309" alt="Screenshot 2025-03-30 at 23 58 45" src="https://github.com/user-attachments/assets/eed4bdfc-cad3-4d39-8e13-049014962929" />
 
-The proposed real-time campaign optimization system consists of five key components:
+The proposed real-time campaign optimization system consists of the following components:
 
-1. **Data Processing Layer**: Ingests and processes customer interaction data and campaign performance metrics in real-time, defines campaign parameters to work on
-2. **Real-Time Optimisaiton**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
-3. **Predictive Models**: Machine learning models to predict campaign performance based on different parameter combinations, trained by results from part 2.
+1. **Real-Time Optimisaiton**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
+2. **Feedback Loops**: Defines important technical and business metrics for the algorithm to find most optimal campaign parameters.
+3. **Predictive Models**: Uses machine learning models (e.g., XGBoost) trained on historical interaction data to anticipate optimal campaign parameters.
 4. **Monitoring & Analytics**: Tracks performance metrics and generates insights
 
 These components work together to create a feedback loop that continuously improves campaign performance through adaptive learning.
 
-## 2. Data Processing
+## 2. Real-Time Optimization Algorithm Design
 
-## 3. Real-Time Optimization Algorithm Design
-
-### 3.2 Multi-Armed Bandit Framework Overview:
+### 2.1 Multi-Armed Bandit Framework Overview:
 
 We chose multi-armed bandit (MAB) algorithms as the foundation for our optimization system because they excel at solving the exploration-exploitation dilemma that lies at the heart of campaign optimization:
 
@@ -46,7 +44,7 @@ For a banking marketing campaign with parameters p₁, p₂, ..., pₙ, each com
 2. Selects parameters based on both expected performance and uncertainty
 3. Updates its knowledge based on actual customer responses
 
-#### 3.2.1 Example:
+#### 2.1.1 Example:
 In the case of marketing campaigns, for each customer, the system:
 - Takes their demographic data (age, gender, income)
 - Combines it with their engagement history (website visits, previous purchases)
@@ -79,7 +77,7 @@ As more data accumulates, the system increasingly favors combinations that work 
 For specific customer segments, different parameter combinations emerge as winners
 The system balances using proven winners and occasionally testing alternatives
 
-### 3.3 Algorithm Development and Implementation
+### 2.2 Algorithm Development and Implementation
 
 Our optimization algorithm was developed through the following methodical process:
 
@@ -94,7 +92,7 @@ We first identified all adjustable campaign parameters relevant to banking marke
 Each combination of these parameters creates a distinct "arm" in our multi-armed bandit system.
 
 #### Step 2: Algorithm Selection and Implementation
-We will implement three algorithm variants, each with specific advantages:
+We will implement three algorithm variants (Thompson Sampling, Upper Confidence Bound, Contextual Epsilon-Greedy), each with specific advantages:
 
 **1. Thompson Sampling Implementation:**  
 
@@ -252,7 +250,7 @@ Additionally, the system continuously monitors for significant performance shift
 
 To identify the most effective optimization strategy, the system rotates among several algorithms: Thompson Sampling, Upper Confidence Bound (UCB), and Epsilon-Greedy. Every 1,000 customer interactions, the algorithm switches to the next strategy. This rotation enables direct comparison to assess which method learns faster and achieves higher conversion rates.
 
-### 3.4 Integration with Predictive Models
+### 2.3 Integration with Predictive Models
 
 As campaign parameters begin to stabilize through continuous experimentation, we leverage accumulated customer interaction data to train predictive models such as XGBoost. This predictive modeling helps anticipate optimal parameters for new customers, significantly reducing the need for extensive trial-and-error.
 
@@ -264,7 +262,7 @@ As campaign parameters begin to stabilize through continuous experimentation, we
 
 This integrated approach ensures both efficient and informed parameter selection, maximizing performance by balancing stability from predictive modeling with ongoing exploratory insights.
 
-### 3.5 Summary: Campaign Lifecycle Management
+### 2.4 Summary: Campaign Lifecycle Management
 
 The optimization algorithm adapts its behavior based on the campaign lifecycle stage:
 
@@ -279,15 +277,15 @@ The optimization algorithm adapts its behavior based on the campaign lifecycle s
    - Progressive traffic allocation to better-performing parameters
 
 3. **Optimization Phase**:
-   - Exploitation-focused strategy using predictive model with minimal exploration
+   - Exploitation-focused strategy using predictive model(XGBoost) with minimal exploration
    - Highly personalized parameter selection
    - Continuous monitoring for performance degradation
 
 This lifecycle approach ensures both effective learning and optimal performance throughout the campaign duration.
 
-## 4. System Components and Integration
+## 3. System Components and Integration
 
-### 4.1 API Service Design
+### 3.1 API Service Design
 
 Our real-time campaign optimization system exposes its functionality through a RESTful API service, enabling seamless integration with the bank's existing marketing platforms and channels. 
 The API service provides the following endpoints:
@@ -305,7 +303,7 @@ The API service provides the following endpoints:
    - `GET /campaigns/{id}/performance`: Get campaign performance metrics
    - `GET /campaigns/{id}/parameters/performance`: Get parameter-specific metrics
 
-### 4.2 Docker Containerization Strategy
+### 3.2 Docker Containerization Strategy
 Containerization is essential for our banking marketing optimization system for several reasons:
 
 1. **Consistent Environments**: Ensures the optimization algorithms behave identically across development, testing, and production environments, critical for regulated banking applications.
@@ -316,27 +314,22 @@ Containerization is essential for our banking marketing optimization system for 
 
 The application is divided into multiple specialized containers:
 
-API Service Container: Handles external requests and directs to appropriate services
-Optimization Engine Container: Runs the bandit algorithms and parameter selection logic
+Bandit Container: Runs the bandit algorithms and parameter selection logic
 Prediction Service Container: Houses the predictive models
-Feedback Processor Container: Processes and incorporates customer interaction data
-Analytics Container: Generates performance metrics and insights
+Feedback Container: Processes and incorporates customer interaction data
+Dashboard Container: Visualise and tracks performance metrics and insights
 Database Containers: Separate containers for different data storage needs
 
 ```
-├── data-ingestion
+├── bandit
 │   ├── Dockerfile
 │   ├── src/
 │   └── requirements.txt
-├── optimization-engine
+├── xgboost
 │   ├── Dockerfile
 │   ├── src/
 │   └── requirements.txt
-├── feedback-loop
-│   ├── Dockerfile
-│   ├── src/
-│   └── requirements.txt
-├── analytics-service
+├── dashboard
 │   ├── Dockerfile
 │   ├── src/
 │   └── requirements.txt
@@ -345,14 +338,13 @@ Database Containers: Separate containers for different data storage needs
 └── docker-compose.yml
 ```
 
-### 4.2 Integration with Marketing Platforms
+### 3.3 Integration with Marketing Platforms
 
 The optimization system integrates with existing marketing platforms through:
 
 1. **Direct API Integration**: Marketing automation platforms call optimization API before sending communications
 2. **Webhook Integration**: Real-time event triggers from websites, apps, and email platforms
 3. **Batch Processing**: Pre-optimized lists for scheduled campaigns
-4. **Real-Time Decisioning**: Embedded JavaScript for web personalization
 
 Integration flow example:
 
@@ -364,11 +356,11 @@ Integration flow example:
 5. Customer interaction data is sent back to optimization engine
 6. Algorithm updates parameter performance statistics
 ```
-## 5. Monitoring, Evaluation, and Continuous Improvement
+## 4. Monitoring, Evaluation, and Continuous Improvement
 
-### 5.1 Key Performance Indicators
+### 4.1 Key Performance Indicators
 
-To rigorously assess our system’s effectiveness, we established an evaluation framework that measures several critical metrics over a specified evaluation window:
+To rigorously assess our entire system’s effectiveness, we established an evaluation framework that measures several critical metrics over a specified evaluation window:
 
 1. **Optimization Metrics**:
    - **Conversion Lift**: Compares the algorithm’s conversion rate against a baseline (traditional/static campaign).
@@ -381,7 +373,7 @@ To rigorously assess our system’s effectiveness, we established an evaluation 
    - **Revenue Attribution**: Identifies and quantifies incremental revenue directly attributable to marketing efforts, enabling clear financial validation and resource allocation decisions.
 
 
-### 5.2 Real-Time Analytics Dashboard
+### 4.2 Real-Time Analytics Dashboard
 
 A real-time dashboard provides visibility into:
 
@@ -390,7 +382,7 @@ A real-time dashboard provides visibility into:
 3. **Customer Segment Analysis**: Performance across different segments
 4. **Algorithm Diagnostics**: Exploration rates and convergence metrics
 
-### 5.3 Continuous Learning Process
+### 4.3 Continuous Learning Process
 
 The system implements continuous improvement through:
 
@@ -399,7 +391,7 @@ The system implements continuous improvement through:
 3. **Concept Drift Detection**: Alerts when customer behavior patterns change
 4. **Parameter Expansion**: Automated suggestion of new parameters to test
 
-## 6. Risk Mitigation
+## 5. Risk Mitigation
 
 Key risks and mitigation strategies:
 
@@ -418,7 +410,7 @@ Key risks and mitigation strategies:
    - Circuit breakers for dependent services
    - Caching strategies for high-volume periods
 
-## 7. Conclusion: 
+## 6. Conclusion: 
 Our real-time marketing campaign optimization system transforms the bank's marketing approach by:
 
 Personalizing at Scale: Delivering customized marketing experiences to millions of customers simultaneously.
