add print in py file

--- a/Notebooks/Segmentation_green.ipynb
+++ b/Notebooks/Segmentation_green.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "[8000 rows x 25 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,16 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_encoded.to_csv('df_A1.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,6 +544,47 @@
     "df_pca = pca_best.fit_transform(df_scaled)\n",
     "kmeans = KMeans(n_clusters=best_k_for_best, random_state=42)\n",
     "labels = kmeans.fit_predict(df_pca)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 3, 4, 4, 3, 3, 4, 3, 2], dtype=int32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 748, 1: 523, 2: 2083, 3: 3062, 4: 1254, 5: 330}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "unique_labels, counts = np.unique(labels, return_counts=True)\n",
+    "label_counts = dict(zip(unique_labels, counts))\n",
+    "print(label_counts)\n"
    ]
   },
   {
@@ -628,6 +660,42 @@
     "# 6. Display results\n",
     "print(\"Final Cluster Centroids in Original Feature Space:\")\n",
     "print(centroids_df.round(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_original['Cluster_Label'] = labels\n",
+    "\n",
+    "df_original.to_csv('segmented_df.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scikit-learn version: 1.5.2\n",
+      "NumPy version: 1.23.5\n",
+      "SciPy version: 1.11.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "import numpy as np\n",
+    "import scipy\n",
+    "\n",
+    "print(\"scikit-learn version:\", sklearn.__version__)\n",
+    "print(\"NumPy version:\", np.__version__)\n",
+    "print(\"SciPy version:\", scipy.__version__)\n"
    ]
   }
  ],
