dataclean py created

--- a/Notebooks/Recommendation system.ipynb
+++ b/Notebooks/Recommendation system.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/lightfm/_lightfm_fast.py:9: UserWarning: LightFM was compiled without OpenMP support. Only a single thread will be used.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1600,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1838,8 +1829,8 @@
    ],
    "source": [
     "transactions[\"date\"] = pd.to_datetime(transactions[\"date\"])\n",
-    "start_date = \"2018-11-01\"\n",
-    "end_date = \"2019-11-01\"\n",
+    "end_date = transactions[\"date\"].max()\n",
+    "start_date = end_date - pd.DateOffset(years=1) + pd.Timedelta(days=1)\n",
     "\n",
     "tran_df = transactions[(transactions[\"date\"] >= start_date) & (transactions[\"date\"] <= end_date)]\n",
     "\n",
@@ -1876,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2686,6 +2677,15 @@
    "source": [
     "final.drop(columns=['client_id','id'], inplace=True)\n",
     "final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_csv(\"../../data/processed/B1/final_data.csv\", index=False)"
    ]
   },
   {
