--- a/src/B2-Campaign-Optimization/B2.md
+++ b/src/B2-Campaign-Optimization/B2.md
@@ -252,7 +252,7 @@ To identify the most effective optimization strategy, the system rotates among s
 
 ### 2.3 Integration with Predictive Models
 
-As campaign parameters begin to stabilize through continuous experimentation, we leverage accumulated customer interaction data to train predictive models such as XGBoost. This predictive modeling helps anticipate optimal parameters for new customers, significantly reducing the need for extensive trial-and-error.
+As the personalised campaign parameters that leads to more conversion begin to stabilize through continuous experimentation, we leverage accumulated customer interaction data to train predictive models such as XGBoost. This predictive modeling helps anticipate optimal parameters for new customers, significantly reducing the need for extensive trial-and-error.
 
 **Bandit-Derived Training Data**: Historical results from the bandit algorithms, based on real-time exploration and performance feedback, form the foundational training dataset.
 
