--- a/src/B2-Campaign-Optimization/B2.md
+++ b/src/B2-Campaign-Optimization/B2.md
@@ -415,7 +415,7 @@ Key risks and mitigation strategies:
    - Caching strategies for high-volume periods
 
 ## 6. Conclusion: 
-Our real-time marketing campaign optimization system transforms the bank's marketing approach by:
+Our real-time marketing campaign optimization system helps banks to transform their marketing approach by:
 
 **Personalizing at Scale**: Delivering customized marketing experiences to millions of customers simultaneously.  
 **Accelerating Learning**e: Reducing the time to identify effective marketing strategies from weeks to hours.  
