minor changes to EDA notebook

--- a/Notebooks/recommendation EDA and data cleaning.ipynb
+++ b/Notebooks/recommendation EDA and data cleaning.ipynb
@@ -948,7 +948,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 5. Account Open Year\n",
+    "### 4. Account Open Year\n",
     "- Shows the **tenure** of the account. Many accounts are opened in year 2020 and after, which might indicate a successful acquisition campaign.\n",
     "- **Long-standing customers** are often **loyal** and may respond well to **relationship-based** offers (e.g., mortgage, investment).\n",
     "- **Newer accounts** might need **welcome promotions** or **onboarding** into higher-tier products.\n",
@@ -961,7 +961,7 @@
     "\n",
     "---\n",
     "\n",
-    "### 6. Credit Limit Bins\n",
+    "### 5. Credit Limit Bins\n",
     "- Shows how credit limits are distributed across customers, with a **peak** in the $10000 to $15000 and fewer high-limit customers.\n",
     "- **Lower-limit** customers may be good candidates for **limit increases** if they demonstrate responsible usage.\n",
     "- **Higher-limit** customers may qualify for **premium or exclusive** offers (concierge services, travel rewards).\n",
@@ -1709,7 +1709,7 @@
     "---\n",
     "\n",
     "### 6. Total Debt Distribution\n",
-    "- **Observation**: Most customer have debt below $100000 where a peak is observed at the range of $0 to $10000  \n",
+    "- **Observation**: Most customer have debt below $100000, where a peak is observed at the range of $0 to $10000  \n",
     "- **Business Implication**:  \n",
     "  - **High-debt users** may need **debt consolidation loans** or **refinancing** options.  \n",
     "  - **Low-debt users** are prime for **additional credit offers** or **investment** recommendations (assuming good credit scores).\n",
@@ -2829,12 +2829,8 @@
     "  - The histogram reveals that the majority of transactions occur at lower amounts (e.g., under \\$100) with a long tail representing occasional high-value transactions.\n",
     "  \n",
     "- **Business Implications:**  \n",
-    "  - **Frequent, Low-Value Transactions:**  \n",
-    "    - Indicates that many customers engage in everyday purchases.\n",
-    "    - Opportunity to promote **cashback programs** or **everyday rewards cards** that benefit small-ticket spending.\n",
-    "  - **High-Value Transactions:**  \n",
-    "    - Although less frequent, these may indicate occasions requiring higher credit limits.\n",
-    "    - Potential target for **premium card offers** or **financing products** (e.g., installment loans or purchase protection services).\n",
+    "  - **Frequent, Low-Value Transactions:** Indicates that many customers engage in everyday purchases, provide opportunity to promote **cashback programs** or **everyday rewards cards** that benefit small-ticket spending.\n",
+    "  - **High-Value Transactions:** Although less frequent, these may indicate occasions requiring higher credit limits, potential target for **premium card offers** or **financing products** (e.g., installment loans or purchase protection services).\n",
     "\n",
     "---\n",
     "\n",
@@ -2844,8 +2840,7 @@
     "  - The count plot shows that the vast majority of transactions are tagged as \"Chip Transaction,\" implying widespread use of chip-enabled cards.\n",
     "  \n",
     "- **Business Implications:**  \n",
-    "  - **Security & Adoption:**  \n",
-    "    - The dominance of chip transactions underscores customers' preference for secure, in-person payment methods.\n",
+    "  - **Security & Adoption:**  The dominance of chip transactions underscores customers' preference for secure, in-person payment methods.\n",
     "    - Opportunity to emphasize security features in marketing campaigns.\n",
     "  - **Upgrade Opportunities:**  \n",
     "    - In cases where older, non-chip methods are still used (if present), these customers can be targeted for upgrades to more secure, modern payment cards.\n",
