minor changes to EDA notebook

--- a/Notebooks/recommendation EDA and data cleaning.ipynb
+++ b/Notebooks/recommendation EDA and data cleaning.ipynb
@@ -962,7 +962,7 @@
     "---\n",
     "\n",
     "### 5. Credit Limit Bins\n",
-    "- Shows how credit limits are distributed across customers, with a **peak** in the $10000 to $15000 and fewer high-limit customers.\n",
+    "- Shows how credit limits are distributed across customers, with a **peak** in the \\$10000 to \\$15000 and fewer high-limit customers.\n",
     "- **Lower-limit** customers may be good candidates for **limit increases** if they demonstrate responsible usage.\n",
     "- **Higher-limit** customers may qualify for **premium or exclusive** offers (concierge services, travel rewards).\n",
     "\n",
@@ -1701,7 +1701,7 @@
     "---\n",
     "\n",
     "### 5. Yearly Income Distribution\n",
-    "- **Observation**: Shows the spread of annual incomes. Skewed toward lower to mid-range with majority having $100000 income per year, with fewer high-income individuals.  \n",
+    "- **Observation**: Shows the spread of annual incomes. Skewed toward lower to mid-range with majority having \\$100000 income per year, with fewer high-income individuals.  \n",
     "- **Business Implication**:  \n",
     "  - **Higher income** → likely eligible for **premium credit lines**, **investment products**, or **mortgages**.  \n",
     "  - **Mid/low income** → might be more interested in **credit-building** products, **lower interest** personal loans, or **basic insurance** coverage.\n",
@@ -1709,7 +1709,7 @@
     "---\n",
     "\n",
     "### 6. Total Debt Distribution\n",
-    "- **Observation**: Most customer have debt below $100000, where a peak is observed at the range of $0 to $10000  \n",
+    "- **Observation**: Most customer have debt below \\$100000, where a peak is observed at the range of \\$0 to \\$10000  \n",
     "- **Business Implication**:  \n",
     "  - **High-debt users** may need **debt consolidation loans** or **refinancing** options.  \n",
     "  - **Low-debt users** are prime for **additional credit offers** or **investment** recommendations (assuming good credit scores).\n",
