--- a/src/B2_Campaign_Optimization/B2.md
+++ b/src/B2_Campaign_Optimization/B2.md
@@ -15,14 +15,15 @@ Traditional banking marketing campaigns suffer from several critical limitations
 Our real-time optimization algorithm transforms this approach by creating a dynamic system that learns and adapts as customers interact with campaigns, maximizing ROI and customer engagement.
 
 ## 1. System Architecture Overview
-<img width="1309" alt="Screenshot 2025-03-30 at 23 58 45" src="https://github.com/user-attachments/assets/eed4bdfc-cad3-4d39-8e13-049014962929" />
+<img width="871" alt="Architecture Overview" src="https://github.com/user-attachments/assets/e9fadc78-dacb-4856-bf16-2b3ddd6ff182" />
 
 The proposed real-time campaign optimization system consists of the following components:
 
-1. **Real-Time Optimisaiton**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
-2. **Feedback Loops**: Defines important technical and business metrics for the algorithm to find most optimal campaign parameters.
-3. **Predictive Models**: Uses machine learning models (e.g., XGBoost) trained on historical interaction data to anticipate optimal campaign parameters.
-4. **Monitoring & Analytics**: Tracks performance metrics and generates insights
+1. **Data Ingestion**: User behaviourial data is ingested to understand and predict what campaign parameters customers may prefer. Task B1's preference prediction is incorporated as part of the adjustable parameters.
+2. **Real-Time Optimisaiton**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
+3. **Feedback Loops**: Defines important technical and business metrics for the algorithm to find most optimal campaign parameters.
+4. **Predictive Models**: Uses machine learning models (e.g., XGBoost) trained on historical interaction data to anticipate optimal campaign parameters.
+5. **Monitoring & Analytics**: Tracks performance metrics and generates insights
 
 These components work together to create a feedback loop that continuously improves campaign performance through adaptive learning.
 
@@ -45,20 +46,7 @@ For a banking marketing campaign with parameters p₁, p₂, ..., pₙ, each com
 3. Updates its knowledge based on actual customer responses
 
 #### 2.1.1 Example:
-In the case of marketing campaigns, for each customer, the system:
-- Takes their demographic data (age, gender, income)
-- Combines it with their engagement history (website visits, previous purchases)
-- Makes predictions based on both customer attributes AND campaign parameters
-
-As time goes by, the system may observe:
-- Younger customers might respond better to social media campaigns with personalized messaging
-- High-income customers might convert more with exclusive offers rather than discounts
-- Customers with high loyalty points might respond better to retention campaigns
-- Morning sends might work better for older demographics, while evening sends work for younger ones
-
-Continuous learning: The system records which combinations worked for which customer segments and refines its strategy over time, becoming increasingly personalized.
-
-Therefore, if we implement this in real life business, the decision process will be as followed:
+If we implement this in real life business, the decision process will be as follows:
 
 **Initial stage (cold start):**
 When a campaign first starts, there's no historical data
@@ -69,13 +57,25 @@ Initial selections are more exploratory and random, collecting baseline data
 For each parameter combination, the system tracks:
 - Number of impressions (how many times it was shown)
 - Number of conversions (how many times it worked)
+- other metrics...
   
 Our bandit algorithms, for example, Thompson Sampling creates Beta distributions for each combination. Parameter combinations with higher success get tighter distributions around higher values, while combinations with few trials get wider distributions (more uncertainty)
 
 **Mature stage:**
-As more data accumulates, the system increasingly favors combinations that work well
-For specific customer segments, different parameter combinations emerge as winners
-The system balances using proven winners and occasionally testing alternatives
+As more data accumulates, the system increasingly favors combinations that work well. For specific customer segments, different parameter combinations emerge as winners. The system balances using proven winners and occasionally testing alternatives.
+
+In the case of marketing campaigns, for each customer, the system:
+- Takes their demographic data (age, gender, income)
+- Combines it with their engagement history (website visits, previous purchases)
+- Makes predictions on campaign parameters
+
+As time goes by, the system may observe:
+- Younger customers might respond better to social media campaigns with personalized messaging
+- High-income customers might convert more with exclusive offers rather than discounts
+- Customers with high loyalty points might respond better to retention campaigns
+- Morning sends might work better for older demographics, while evening sends work for younger ones
+
+The system records which combinations worked for which customer segments and refines its strategy over time, becoming increasingly personalized.
 
 ### 2.2 Algorithm Development and Implementation
 
@@ -83,12 +83,16 @@ Our optimization algorithm was developed through the following methodical proces
 
 #### Step 1: Parameter Space Definition
 We first identified all adjustable campaign parameters relevant to banking marketing:
+  
+The Offer Type is derived from Task B1 Customer Preference Prediction, where we recommend products as our prediction based on their behavorial data:
 - **Offer Type**: Product-specific offers (credit cards, loans, savings accounts, investment products)
+
+The following are campaign-specific parameters, where we define how campaigns are delivered. These parameters can be observed in `data/raw/digital_marketing_campaign_dataset.csv`:
 - **Discount Structure**: Rate reductions, fee waivers, cashback percentages, loyalty points
 - **Communication Channel**: Email, SMS, mobile app notifications, online banking alerts, branch communications
 - **Message Timing**: Time of day, day of week, in relation to customer banking activities
-- **Call-to-Action Style**: Direct, consultative, informational
-
+- **Campaign Type**: Awareness, Retention, Conversion
+- 
 Each combination of these parameters creates a distinct "arm" in our multi-armed bandit system.
 
 #### Step 2: Algorithm Selection and Implementation
@@ -230,9 +234,9 @@ FUNCTION contextual_epsilon_greedy(customer_data, campaign_id, epsilon=0.1):
 
 #### Step 3: Feedback Metrics
 
-To update campagign parameters effectively in real-time, we developed a detailed feedback system that operates as follows:
+To update campagign parameters effectively in real-time, we developed a detailed feedback system.
 
-When a customer interacts with a marketing campaign, the system first checks if the customer completed a conversion (such as opening an account or subscribing to a service). It also captures intermediate engagement behaviors, including clicks, views, and dwell times.
+In this feedback loop, real-time customer interaction and engagement data directly updates key performance metrics that inform the parameter selection process within the bandit algorithm. Each cycle of interactions—including conversions, clicks, views, and other customer behaviors—helps refine the expected performance estimates for each campaign parameter combination. 
 
 These outcomes are then used to update several key metrics:
 
@@ -244,7 +248,7 @@ These outcomes are then used to update several key metrics:
 
 - **Segment-Level Performance**: Updates data based on customer segments, improving the algorithm’s ability to tailor campaigns to groups with similar behaviors.
 
-Additionally, the system continuously monitors for significant performance shifts. If a notable change is detected, it triggers an analysis alert for further investigation.
+This continuous influx of new data allows the bandit algorithm to dynamically update its parameter selection. The parameters that yield more optimal results will be more prominently used. Over successive iterations, this process progressively reduces uncertainty and enhances personalized campaign effectiveness.
 
 #### Step 4: Strategy Comparison
 
@@ -258,7 +262,9 @@ As the personalised campaign parameters that leads to more conversion begin to s
 
 **XGBoost Predictive Modeling**: The XGBoost model is trained on this historical data to predict effective campaign parameters. Its recommendations integrate both past performance patterns and domain-specific insights.
 
-**Hybrid Parameter Selection**: At mature stage, the system predominantly uses XGBoost-generated recommendations to guide parameter selection. However, if the predictive model's recommendations consistently underperform for specific customer segments, the bandit algorithm re-engages to experiment with alternative parameters. Periodically, the bandit algorithm also tests new or rarely-used parameters to uncover potential opportunities that predictive modeling alone might miss.
+**Hybrid Parameter Selection**: At mature stage, the system predominantly uses XGBoost-generated recommendations to guide parameter selection. However, if the predictive model's recommendations consistently underperform for specific customer segments, the bandit algorithm re-engages to experiment with alternative parameters. At the same time, the bandit algorithm also tests new or rarely-used parameters to uncover potential opportunities that predictive modeling alone might miss.
+
+**Periodical Retraining**: The XGBoost model will be periodically retrained on the expanding dataset, enabling the algorithm to continuously adapt and recalibrate its parameters to the change of customer pereferences.
 
 This integrated approach ensures both efficient and informed parameter selection, maximizing performance by balancing stability from predictive modeling with ongoing exploratory insights.
 
